--- a/assets/files/naaclhlt2018-latex/naaclhlt2018.tex
+++ b/assets/files/naaclhlt2018-latex/naaclhlt2018.tex
@@ -58,15 +58,19 @@
 
 \section{Credits}
 
-
-This document has been adapted from the instructions for earlier ACL
-and NAACL proceedings, including those for ACL 2017 by Dan Gildea and
-Min-Yen Kan, NAACL-HLT 2016 by Margaret Mitchell, ACL 2012 by Maggie Li
-and Michael White, ACL 2010 by Jing-Shing Chang and Philipp
-Koehn, ACL 2008 by Johanna D. Moore, Simone Teufel, James
-Allan, and Sadaoki Furui, ACL 2005 by Hwee Tou Ng and Kemal
-Oflazer, ACL 2002 by Eugene Charniak and Dekang Lin, and
-earlier ACL and EACL formats. Those versions were written by several
+This document has been adapted from the instructions
+for earlier ACL and NAACL proceedings,
+including those for ACL 2017 by Dan Gildea
+and Min-Yen Kan, NAACL 2017 by Margaret
+Mitchell, ACL 2012 by Maggie Li and Michael
+White, those from ACL 2010 by Jing-Shing Chang
+and Philipp Koehn, those for ACL 2008 by Johanna
+D. Moore, Simone Teufel, James Allan, and
+Sadaoki Furui, those for ACL 2005 by Hwee Tou
+Ng and Kemal Oflazer, those for ACL 2002 by Eugene
+Charniak and Dekang Lin, and earlier ACL
+and EACL formats.
+Those versions were written by several
 people, including John Chen, Henry S. Thompson and Donald
 Walker. Additional elements were taken from the formatting
 instructions of the {\em International Joint Conference on Artificial
