--- a/assets/files/naaclhlt2018-latex/naaclhlt2018.sty
+++ b/assets/files/naaclhlt2018-latex/naaclhlt2018.sty
@@ -369,7 +369,7 @@
 	     \bf\@author
 	\else 
 		% Avoiding common accidental de-anonymization issue. --MM
-     		\bf Anonymous ACL submission
+     		\bf Anonymous NAACL submission
 	\fi
     \end{tabular}}
 
