--- a/002.book.md
+++ b/002.book.md
@@ -182,7 +182,7 @@ If authors send you an externally signed copyright form, pass it along to the co
 
 **Errors**: You may see a "Warning" message in the upper right corner of the website. This means that that authors have updated their START profiles (most commonly their affiliation). You will need to refresh in order for the changes to be reflected in the copyright signatures, and in the html `order` file later on.
 
-<kbd>![alt text](assets/images/start_warning.png "Image of "Warning" notification in START portal.")</kbd>
+<kbd>![alt text](assets/images/start_warning.png "Image of 'Warning' notification in START portal.")</kbd>
 
 
 
