--- a/002.book.md
+++ b/002.book.md
@@ -608,7 +608,7 @@ Once you can compile `All` without errors, you are done! :balloon: :balloon:
   
 ## Expert Route
 
-1. Download the ACLPUB and CDROM zipfiles in the **Dwnl Templates** tab, [download the compilation scripts here](assets/files/create_book), edit the files and compile all the things perfectly, re-zip, and upload.  See the [Dwnl Templates](#step-3--dwnl-templates-tab) section for more.
+1. Download the ACLPUB and CDROM zipfiles in the **Dwnl Templates** tab, [download the compilation scripts here](https://github.com/acl-org/ACLPUB), edit the files and compile all the things perfectly, re-zip, and upload.  See the [Dwnl Templates](#step-3--dwnl-templates-tab) section for more.
 
 Here is a flowchart to illustrate the process. The ACLPUB scripts in this download use makefiles that roughly follow the steps in this flowchart.
 
