--- a/002.book.md
+++ b/002.book.md
@@ -567,7 +567,9 @@ An example of a workshop:
 ## Step 7:  Program Tab
 [Jump to Step 8](#step-8--toc-tab)
 
-Customize your book proceedings Program `program.tex` here.  This is generated automatically in the Templates tab, when you click the  `Program` button.  See [Step Five](#step-5--templates-tab). If you are not satisfied with the automatic generation, you may edit it further here. Otherwise, you may skip this step. 
+Customize your book proceedings Program `program.tex` here.  This is generated automatically in the Templates tab, when you click the  `Program` button.  See [Step Five](#step-5--templates-tab). If you are not satisfied with the apperaance of the automatic generation, you may edit it further here. Otherwise, you may skip this step. 
+
+Note: If you create a custom program **make sure that the order file matches the custom program**. The order file is what is used for the handbook and the website/app, so it must contain the correct information.
 
 <kbd>![alt text](assets/images/program.png "The Program Tab.")</kbd>
 
