--- a/002.book.md
+++ b/002.book.md
@@ -39,14 +39,16 @@ Document originally written by Meg Mitchell, for ACL 2017, NAACL 2018, and ACL 2
    [Step 8:  Toc Tab](#step-8--toc-tab)
    
    [Step 9:  Generate! Tab](#step-9--generate-tab-trophy-trophy) :trophy:
+
+4. [Non-Archival Papers](#non-archival)
    
-4. [Expert Route](#expert-route)
+5. [Expert Route](#expert-route)
 
-5. [What to Look Out For](#what-to-look-out-for)
+6. [What to Look Out For](#what-to-look-out-for)
 
-6. [Authors](#authors)
+7. [Authors](#authors)
 
-7. Tables
+8. Tables
 
    [Table 1:  Files used in Book Proceedings Generation](#table-1--files-used-in-book-proceedings-generation)
 
@@ -606,6 +608,31 @@ Once you can compile `All` without errors, you are done! :balloon: :balloon:
 [7: Program](#step-7--program-tab) &middot; 
 [8: TOC](#step-8--toc-tab) &middot; 
 [9: Generate!](#step-9--generate-tab-trophy-trophy)
+
+## Non-Archival Papers
+Read this if your track or workshop will have non-archival papers. 
+
+Of course, non-archival papers are **not included in the proceedings** so there are some tricks we must take when dealing with them. 
+
+If you want your non-archival papers to appear in the schedule that is printed in the handbook, listed on the website and conference app, follow these instructions. 
+
+1. Ensure that the non-archival papers have a submission ID in START (they should if you used START to collect their submissions).
+
+2. Ask authors to update/verify their title, author list, and abstract with their camera-ready information.
+
+3. Regarding the camera-ready PDF:
+- Authors may submit their final camera-ready versions to START, but you **must** give those papers a status other than 'Accept', as the archival proceedings are automatically generated from any paper you assigned the 'Accept' status. Create your own custom status (via "Manage custom acceptance statuses" from the "Master Accept/Reject Checklist") and call it 'non-archival'. Assign it to those papers. 
+- Alternatively, if you do not have authors submit a camera-ready PDF, you do not have to worry about this step.
+
+4. Include the non-archival papers in the schedule. You can generate the schedule using any option above (i.e. using the Schedule Maker tool or by directly editing the order file).
+
+5. When you generate your proceedings following the instructions above, the result should be: 
+- Non-archival papers **will not** appear in the table of contents
+- Non-archival papers **will not** have a PDF in the proceedings
+- Non-archival papers **will not** have their authors listed in the index
+- Non-archival papers **will** be listed in the schedule, but **will not** have a hyperref to the pdf in the document.
+
+As this is a relatively new process, please contact your conference publication chairs for questions, or the NAACL 2019 publication chairs who wrote these instructions.
 
   
 ## Expert Route
