--- a/002.book.md
+++ b/002.book.md
@@ -40,7 +40,7 @@ Document originally written by Meg Mitchell, for ACL 2017, NAACL 2018, and ACL 2
    
    [Step 9:  Generate! Tab](#step-9--generate-tab-trophy-trophy) :trophy:
 
-4. [Non-Archival Papers](#non-archival)
+4. [Non Archival Papers](#non-archival-papers)
    
 5. [Expert Route](#expert-route)
 
@@ -609,7 +609,7 @@ Once you can compile `All` without errors, you are done! :balloon: :balloon:
 [8: TOC](#step-8--toc-tab) &middot; 
 [9: Generate!](#step-9--generate-tab-trophy-trophy)
 
-## Non-Archival Papers
+## Non Archival Papers
 Read this if your track or workshop will have non-archival papers. 
 
 Of course, non-archival papers are **not included in the proceedings** so there are some tricks we must take when dealing with them. 
