--- a/002.book.md
+++ b/002.book.md
@@ -415,8 +415,9 @@ These files are used to create the `index.html`, `authors.html`, and `program.ht
    
 This tab creates the file called `order`.
  
-The `order` file is used to format and order the papers in the
-proceedings, in the schedule, and also to generate the handbook. 
+**The `order` file is used to format and order the papers in the
+proceedings, in the schedule, and also to generate the handbook, 
+and populate the conference website and app.** 
 The latter can be a
 complex task, making sure that the schedule is formatted correctly and
 consistently, and pulling together times across workshops (like the
