--- a/002.book.md
+++ b/002.book.md
@@ -633,6 +633,8 @@ If you want your non-archival papers to appear in the schedule that is printed i
 - Non-archival papers **will not** have their authors listed in the index
 - Non-archival papers **will** be listed in the schedule, but **will not** have a hyperref to the pdf in the document.
 
+6. Coordinate with your Handbook and Website/App Chairs to make sure they have all the required metadata. In particular, they will need the START paper ID, title, authors, and abstract. You may need to provide this information in a separate file. 
+
 As this is a relatively new process, please contact your conference publication chairs for questions, or the NAACL 2019 publication chairs who wrote these instructions.
 
   
