--- a/paper_styles/latex/acl2020.sty
+++ b/paper_styles/latex/acl2020.sty
@@ -100,6 +100,7 @@
 \ExecuteOptions{hyperref} % default is to use hyperref
 \ProcessOptions\relax
 \ifacl@hyperref
+  \PassOptionsToPackage{breaklinks}{hyperref}
   \RequirePackage{hyperref}
   \usepackage{xcolor}		% make links dark blue
   \definecolor{darkblue}{rgb}{0, 0, 0.5}
