--- a/paper_styles/latex/acl2019.sty
+++ b/paper_styles/latex/acl2019.sty
@@ -343,7 +343,7 @@
 \def\aclruler#1{\makevruler[14.17pt][#1][1][3][\textheight]\usebox{\aclrulerbox}}
 \def\leftoffset{-2.1cm} %original: -45pt
 \def\rightoffset{17.5cm} %original: 500pt
-\ifaclfinal\else\pagenumbering{arabic}
+\ifaclfinal\else\pagenumbering{arabic}\fi
 \AddToShipoutPicture{%
 \ifaclfinal\else
 \AtPageLowishCenter{\thepage}
