--- a/paper_styles/latex/acl2020.sty
+++ b/paper_styles/latex/acl2020.sty
@@ -349,7 +349,7 @@
 
 \def\leftoffset{-2.1cm} %original: -45pt
 \def\rightoffset{17.5cm} %original: 500pt
-\ifaclfinal\else\pagenumbering{arabic}
+\ifaclfinal\else\pagenumbering{arabic}\fi
 \AddToShipoutPicture{%
 \ifaclfinal\else
 \AtPageLowishCenter{\textcolor{black}{\thepage}}
