--- a/002.book.md
+++ b/002.book.md
@@ -68,7 +68,7 @@ You will be used softconf/START to generate your proceedings. Your goal is to ge
 
 1. Confirm with your Publication or Workshop chairs that they have the **precise name** of your workshop. Based on the workshop name, you will be provided an ISBN. 
 
-2. Your ACL ID Prefix, henceforth called **Bibtex URL** (e.g., http://www.aclweb.org/anthology/W17-20%2d) is used to index your proceedings in the anthology. Your Publication or Workshop chair will provide this URL from the Anthology Editor.
+2. Your ACL ID Prefix, henceforth called **Bibtex URL** is used to index your proceedings in the anthology (e.g., `http://www.aclweb.org/anthology/W17-20%2d`, and yes, including the `%`. This is not an actual website, it is a template for when your proceedings are put on the anthology). Your Publication or Workshop chair will provide this URL from the Anthology Editor.
 
 3. Papers should be in A4 format.
 
