--- a/002.book.md
+++ b/002.book.md
@@ -74,6 +74,8 @@ You will be used softconf/START to generate your proceedings. Your goal is to ge
 
 4. Program times should be in 24-hour format.
 
+5. *A note to Publication Chairs*: In the past, we have had success creating a spreadsheet with all the tracks and workshop information [like this one for NAACL 2019](https://docs.google.com/spreadsheets/d/1hSlqWCcTHZw-vaUQz-CBULIWtO99e0mNI8QP9sDohT0/edit?usp=sharing). From this spreadsheet, workshop titles can be confirmed, and ISBNs and Bibtex URLs can be assigned by the ACL and Anthology director. Consider creating this yourselves, or coordinating with your Workshop Chairs on a combined spreadsheet. 
+
 ## Introduction
 
 You should be able to produce your proceedings entirely within the START manager console. Once your book builds without error using the `All` button under the Generate tab, let the publications chairs know by e-mailing the conference publication chairs. We will collect the books online using START. There is no need to e-mail us any zipped files.
