re-remove paper id in header, because it can be added automatically by START

--- a/paper_styles/latex/acl2020.sty
+++ b/paper_styles/latex/acl2020.sty
@@ -337,8 +337,7 @@
 %\makeatother
 
 
-\def\aclpaperid{***}
-\def\confidential{\textcolor{black}{ACL 2020 Submission~\aclpaperid.  Confidential Review Copy.  DO NOT DISTRIBUTE.}}
+\def\confidential{\textcolor{black}{Confidential Review Copy.  DO NOT DISTRIBUTE.}}
 
 %% Page numbering, Vruler and Confidentiality %%
 % \makevruler[<SCALE>][<INITIAL_COUNT>][<STEP>][<DIGITS>][<HEIGHT>]
