--- a/paper_styles/latex/acl2020.tex
+++ b/paper_styles/latex/acl2020.tex
@@ -33,7 +33,6 @@
 \usepackage{microtype}
 
 %\aclfinalcopy % Uncomment this line for the final submission
-%\def\aclpaperid{***} %  Enter the acl Paper ID here
 
 %\setlength\titlebox{5cm}
 % You can expand the titlebox if you need extra space
@@ -152,8 +151,7 @@ Reviewers are generally aware that authors may present preliminary versions of t
 Once a paper has been accepted to the conference, the camera-ready version of the paper should include the author's names and affiliations, and is allowed to use self-references.
 
 \paragraph{\LaTeX-specific details:}
-For an anonymized submission, ensure that {\small\verb|\aclfinalcopy|} at the top of this document is commented out, and that you have filled in the paper ID number (assigned during the submission process on softconf) where {\small\verb|***|} appears in the {\small\verb|\def\aclpaperid{***}|} definition at the top of this document.
-For a camera-ready submission, ensure that {\small\verb|\aclfinalcopy|} at the top of this document is not commented out.
+For an anonymized submission, ensure that {\small\verb|\aclfinalcopy|} at the top of this document is commented out. For a camera-ready submission, ensure that {\small\verb|\aclfinalcopy|} at the top of this document is not commented out.
 
 
 \section{Multiple Submission Policy}
